--- a/main.css
+++ b/main.css
@@ -1,8 +1,17 @@
 #product-overview {
-  background: url("freedom.jpg");
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+    url("./images/freedom.jpg") left 10% bottom 20% / cover no-repeat border-box,
+    #ff1b68;
+  /* background-image: url("./images/freedom.jpg");
+  background-size: cover;
+  background-position: left 10% bottom 20%;
+  /* background-repeat: no-repeat;
+  background-origin: border-box; */
   width: 100%;
   height: 528px;
   padding: 10px;
+  margin-top: 43px;
+  position: relative;
 }
 
 .section-title {
@@ -13,6 +22,9 @@
 #product-overview h1 {
   color: white;
   font-family: "Anton", sans-serif;
+  position: absolute;
+  bottom: 5%;
+  left: 3%;
 }
 
 .plan__list {
@@ -110,6 +122,7 @@ Alternative to this (just to be consistent with class styling though)
   border: 2px solid #424242;
   border-radius: 50%;
   margin: auto;
+  padding: 20px;
 }
 .key-feature__description {
   text-align: center;
