--- a/shared.css
+++ b/shared.css
@@ -28,6 +28,15 @@ body {
   text-decoration: none;
   font-weight: bold;
   font-size: 22px;
+  /* Leaving this for alt case */
+  /* width: 20px; */
+  height: 23px;
+  display: inline-block;
+}
+
+.main-header__brand img {
+  height: 100%;
+  /* width: 100%; */
 }
 
 .main-nav {
