--- a/main.css
+++ b/main.css
@@ -1,16 +1,20 @@
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url("./images/freedom.jpg") left 10% bottom 20% / cover no-repeat border-box,
+    url("images/freedom.jpg") left 10% bottom 70% / cover no-repeat border-box,
     #ff1b68;
-  /* background-image: url("./images/freedom.jpg");
-  background-size: cover;
-  background-position: left 10% bottom 20%;
+  /* background-image: url("freedom.jpg");
+    background-size: cover;
+    background-position: left 10% bottom 20%; */
   /* background-repeat: no-repeat;
-  background-origin: border-box; */
-  width: 100%;
-  height: 528px;
-  padding: 10px;
-  margin-top: 43px;
+    background-origin: border-box;
+    background-clip: border-box; */
+  /* background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0,0,0,0.5)); */
+  /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
+  width: 100vw;
+  height: 33vh;
+  /* height: 33rem; */
+  margin-top: 2.75rem;
+  /* border: 5px dashed red; */
   position: relative;
 }
 
@@ -23,7 +27,7 @@
   color: white;
   font-family: "Anton", sans-serif;
   position: absolute;
-  bottom: 0%;
+  bottom: 5%;
   left: 3%;
 }
 
@@ -34,43 +38,27 @@
 }
 
 .plan {
-  background-color: #d5ffdc;
+  background: #d5ffdc;
   text-align: center;
-  padding: 16px;
-  margin: 8px;
+  padding: 1rem;
+  margin: 0.5rem;
   display: inline-block;
   width: 30%;
   vertical-align: middle;
 }
 
 .plan--highlighted {
-  background-color: #19b84c;
+  background: #19b84c;
   color: white;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan__annotation {
-  background-color: white;
+  background: white;
   color: #19b84c;
-  padding: 8px;
+  padding: 0.5rem;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
-}
-
-.plan__features {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* .plan__features li {
-  margin: 8px 0;
-} 
-Alternative to this (just to be consistent with class styling though)
-*/
-
-.plan__feature {
-  margin: 8px 0;
 }
 
 .plan__title {
@@ -82,31 +70,39 @@ Alternative to this (just to be consistent with class styling though)
 }
 
 .plan--highlighted .plan__title {
-  color: #fff;
+  color: white;
 }
 
 .plan--highlighted .plan__price {
   color: #0e4f1f;
 }
 
-/* Key features section */
+.plan__features {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.plan__feature {
+  margin: 0.5rem 0;
+}
 
 #key-features {
   background: #ff1b68;
-  margin-top: 80px;
-  padding: 16px;
+  margin-top: 5rem;
+  padding: 1rem;
 }
 
 #key-features .section-title {
   color: white;
-  margin: 32px;
+  margin: 2rem;
 }
 
 .key-feature__list {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center; /*IT CENTERS INLINE ELEMENTS AS WELL AS TEXT*/
+  text-align: center;
 }
 
 .key-feature {
@@ -122,11 +118,16 @@ Alternative to this (just to be consistent with class styling though)
   border: 2px solid #424242;
   border-radius: 50%;
   margin: auto;
-  padding: 20px;
+  padding: 1.5rem;
 }
+
 .key-feature__description {
   text-align: center;
   font-weight: bold;
   color: white;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
+
+/* h1 {
+    font-family: sans-serif;
+} */
