--- a/shared.css
+++ b/shared.css
@@ -13,19 +13,18 @@ body {
   top: 0;
   left: 0;
   z-index: 100;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5);
 }
 
-/* Header */
 .main-header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   background: #2ddf5c;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   z-index: 1;
 }
 
@@ -38,10 +37,9 @@ body {
   color: #0e4f1f;
   text-decoration: none;
   font-weight: bold;
-  font-size: 22px;
-  /* Leaving this for alt case */
+  font-size: 1.5rem;
+  height: 1.5rem;
   /* width: 20px; */
-  height: 23px;
   display: inline-block;
 }
 
@@ -65,14 +63,14 @@ body {
 
 .main-nav__item {
   display: inline-block;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 
 .main-nav__item a {
   text-decoration: none;
   color: #0e4f1f;
   font-weight: bold;
-  padding: 3px 0;
+  padding: 0.2rem 0;
 }
 
 .main-nav__item a:hover,
@@ -84,7 +82,7 @@ body {
 .main-nav__item--cta a {
   color: white;
   background: #ff1b68;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   border-radius: 8px;
 }
 
@@ -95,11 +93,10 @@ body {
   border: none;
 }
 
-/* footer */
 .main-footer {
   background: black;
-  padding: 32px;
-  margin-top: 48px;
+  padding: 2rem;
+  margin-top: 3rem;
 }
 
 .main-footer__links {
@@ -111,7 +108,7 @@ body {
 
 .main-footer__link {
   display: inline-block;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 
 .main-footer__link a {
@@ -124,17 +121,15 @@ body {
   color: #ccc;
 }
 
-/* Button styling */
-
 .button {
   background: #0e4f1f;
   color: white;
   font: inherit;
   border: 1.5px solid #0e4f1f;
-  padding: 8px;
+  padding: 0.5rem;
   border-radius: 8px;
-  cursor: pointer;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .button:hover,
