--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,22 +1,18 @@
+main {
+  padding-top: 2.5rem;
+}
+
 .testimonial {
   font-size: 1.2rem;
-  margin: 3rem 0;
 }
 
-.testimonial__list {
-  width: 80%;
-  margin: auto;
-}
-
-.testimonial:first-of-type {
+/* .testimonial:first-of-type {
   margin-top: 6rem;
-}
+} */
 
 .testimonial__image-container {
-  width: 65%;
-  max-width: 580px;
-  display: inline-block;
-  vertical-align: middle;
+  width: 100%;
+  max-width: 40rem;
   box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
 }
 
@@ -32,9 +28,6 @@
 .testimonial__info {
   text-align: right;
   padding: 0.9rem;
-  display: inline-block;
-  vertical-align: middle;
-  width: 30%;
 }
 
 #customer-2.testimonial {
@@ -69,4 +62,24 @@
 
 .testimonial__text {
   margin: 0.2rem;
+}
+
+@media (min-width: 41rem) {
+  .testimonial {
+    margin: 3rem auto;
+    max-width: 1500px;
+  }
+
+  .testimonial__image-container {
+    width: 65%;
+    max-width: 580px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  .testimonial__info {
+    display: inline-block;
+    vertical-align: middle;
+    width: 30%;
+  }
 }
