--- a/main.css
+++ b/main.css
@@ -1,56 +1,62 @@
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url("images/freedom.jpg") left 10% bottom 70% / cover no-repeat border-box,
+    url("images/freedom.jpg") left 25% bottom 20% / cover no-repeat border-box,
     #ff1b68;
-  /* background-image: url("freedom.jpg");
-    background-size: cover;
-    background-position: left 10% bottom 20%; */
-  /* background-repeat: no-repeat;
-    background-origin: border-box;
-    background-clip: border-box; */
-  /* background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0,0,0,0.5)); */
-  /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
-  width: 100vw;
-  height: 33vh;
-  /* height: 33rem; */
-  margin-top: 2.75rem;
-  /* border: 5px dashed red; */
-  position: relative;
-}
 
-.section-title {
-  color: #2ddf5c;
-  text-align: center;
+  width: 100%;
+  /* height: 33vh; */
+  height: calc(100vh - 3.5rem);
+  /* margin-top: 3.5rem; */
+  position: relative;
 }
 
 #product-overview h1 {
   color: white;
   font-family: "Anton", sans-serif;
   position: absolute;
-  bottom: 5%;
+  bottom: 10%;
   left: 3%;
+  font-size: 1.6rem;
 }
 
-.plan__list {
-  width: 80%;
-  margin: auto;
+/* For desktop view */
+@media (min-width: 41rem) {
+  #product-overview {
+    /* height: 100vh; */
+    /* height: 40vh; */
+    /* background-position: center;
+     */
+
+    background-position: left 25% bottom 50%;
+  }
+
+  #product-overview h1 {
+    font-size: 3rem;
+  }
+}
+
+.section-title {
+  color: #2ddf5c;
   text-align: center;
 }
+/* 
+.plan__list {
+  width: 100%;
+  text-align: center;
+} */
 
 .plan {
   background: #d5ffdc;
   text-align: center;
   padding: 1rem;
-  margin: 0.5rem;
-  display: inline-block;
-  width: 30%;
-  vertical-align: middle;
+  display: block;
+  margin: 0.5rem 0;
+  width: 100%;
 }
 
 .plan--highlighted {
   background: #19b84c;
   color: white;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan__annotation {
@@ -96,20 +102,18 @@
 #key-features .section-title {
   color: white;
   margin: 2rem;
+  text-align: center;
 }
 
 .key-feature__list {
   list-style: none;
   margin: 0;
   padding: 0;
+  /* margin: auto; */
   text-align: center;
 }
 
-.key-feature {
-  display: inline-block;
-  width: 30%;
-  vertical-align: top;
-}
+/*   */
 
 .key-feature__image {
   background: #ffcede;
@@ -175,4 +179,54 @@
 .modal__action--negative:active {
   background: #ff5454;
   border-color: #ff5454;
+}
+
+@media (min-width: 41rem) {
+  #product-overview {
+    /* height: 100vh; */
+    /* height: 40vh; */
+    /* background-position: center;
+     */
+
+    background-position: left 25% bottom 50%;
+  }
+
+  #product-overview h1 {
+    font-size: 3rem;
+  }
+}
+
+@media (min-width: 41rem) {
+  .plan__list {
+    width: 100%;
+    text-align: center;
+  }
+
+  .plan {
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+    min-width: 13rem;
+    max-width: 25rem;
+  }
+
+  .plan--highlighted {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+  }
+}
+
+@media (min-width: 41rem) {
+  .key-feature {
+    display: inline-block;
+    width: 30%;
+    vertical-align: top;
+    max-width: 25rem;
+  }
+}
+
+@media (min-width: 1300px) {
+  #product-overview h1 {
+    bottom: 10%;
+    left: 55%;
+  }
 }
