--- a/shared.css
+++ b/shared.css
@@ -2,9 +2,19 @@
   box-sizing: border-box;
 }
 
+html {
+  width: 100%;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
+  width: 100%;
+}
+
+main {
+  min-height: calc(100vh - 3.5rem - 8.1875rem);
+  margin-top: 3.5rem;
 }
 
 .backdrop {
@@ -25,6 +35,7 @@ body {
   left: 0;
   background: #2ddf5c;
   padding: 0.5rem 1rem;
+  /* padding: 0.6rem; */
   z-index: 1;
 }
 
@@ -59,9 +70,8 @@ body {
   color: #0e4f1f;
   text-decoration: none;
   font-weight: bold;
-  font-size: 1.5rem;
-  height: 1.5rem;
-  /* width: 20px; */
+  /* font-size: 1.5rem; */
+  height: 2.5rem;
   display: inline-block;
   vertical-align: middle;
 }
@@ -71,11 +81,15 @@ body {
   /* width: 100%; */
 }
 
-.main-nav {
+/* .main-nav {
   display: inline-block;
   text-align: right;
   width: calc(100% - 122px);
   vertical-align: middle;
+} */
+
+.main-nav {
+  display: none;
 }
 
 .main-nav__items {
@@ -136,8 +150,8 @@ body {
 }
 
 .main-footer__link {
-  display: inline-block;
-  margin: 0 1rem;
+  display: block;
+  margin: 1rem 0;
 }
 
 .main-footer__link a {
@@ -201,4 +215,27 @@ body {
 
 .open {
   display: block !important;
+}
+
+/* Media query */
+
+@media (min-width: 41rem) {
+  .toggle-button {
+    display: none;
+  }
+
+  .main-nav {
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 44px);
+
+    vertical-align: middle;
+  }
+}
+
+@media (min-width: 41rem) {
+  .main-footer__link {
+    display: inline-block;
+    margin: 0 1rem;
+  }
 }
