--- a/shared.css
+++ b/shared.css
@@ -185,6 +185,13 @@ main {
   outline: none;
 }
 
+.button[disabled] {
+  cursor: not-allowed;
+  border-color: #a1a1a1;
+  background: #ccc;
+  color: #a1a1a1;
+}
+
 .mobile-nav {
   display: none;
   position: fixed;
