--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url("images/freedom.jpg") left 25% bottom 20% / cover no-repeat border-box,
+    url('images/freedom.jpg') left 25% bottom 20% / cover no-repeat border-box,
     #ff1b68;
 
   width: 100%;
@@ -12,7 +12,7 @@
 
 #product-overview h1 {
   color: white;
-  font-family: "Anton", sans-serif;
+  font-family: 'Anton', sans-serif;
   position: absolute;
   bottom: 10%;
   left: 3%;
@@ -136,9 +136,10 @@
   position: fixed;
   display: none;
   z-index: 200;
-  top: 20%;
-  left: 30%;
-  width: 40%;
+  /* top: 20%; */
+  top: 30%;
+  left: 25%;
+  width: 50%;
   background: white;
   padding: 1rem;
   border: 1px solid #ccc;
@@ -147,6 +148,7 @@
 
 .modal__title {
   text-align: center;
+  font-size: 1.5rem;
   margin: 0 0 1rem 0;
 }
 
@@ -221,6 +223,12 @@
     width: 30%;
     vertical-align: top;
     max-width: 25rem;
+  }
+}
+
+@media (min-width: 41rem) {
+  .modal__title {
+    font-size: 2rem;
   }
 }
 
