--- a/shared.css
+++ b/shared.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   width: 100%;
 }
@@ -28,6 +28,12 @@ main {
   background: rgba(0, 0, 0, 0.5);
 }
 
+/*
+ Align content -> cross axis
+ Justify content -> main axis
+ align content -> cross axis (Only kicks in when there are 2 or more rows  ) 
+
+*/
 .main-header {
   width: 100%;
   position: fixed;
@@ -37,12 +43,17 @@ main {
   padding: 0.5rem 1rem;
   /* padding: 0.6rem; */
   z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
+/*Not needed as we used flex*/
+/* 
 .main-header > div {
   display: inline-block;
   vertical-align: middle;
-}
+} */
 
 .toggle-button {
   width: 3rem;
@@ -71,22 +82,15 @@ main {
   text-decoration: none;
   font-weight: bold;
   /* font-size: 1.5rem; */
-  height: 2.5rem;
-  display: inline-block;
-  vertical-align: middle;
+
+  /* display: inline-block;
+  vertical-align: middle; */
 }
 
 .main-header__brand img {
-  height: 100%;
-  /* width: 100%; */
-}
-
-/* .main-nav {
-  display: inline-block;
-  text-align: right;
-  width: calc(100% - 122px);
+  height: 2.5rem;
   vertical-align: middle;
-} */
+}
 
 .main-nav {
   display: none;
@@ -96,10 +100,11 @@ main {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  /* justify-content: flex-end; */
 }
 
 .main-nav__item {
-  display: inline-block;
   margin: 0 1rem;
 }
 
@@ -210,6 +215,9 @@ main {
   margin: 10% auto;
   padding: 0;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .mobile-nav__item {
@@ -232,11 +240,7 @@ main {
   }
 
   .main-nav {
-    display: inline-block;
-    text-align: right;
-    width: calc(100% - 44px);
-
-    vertical-align: middle;
+    display: flex;
   }
 }
 
