--- a/shared.css
+++ b/shared.css
@@ -120,7 +120,10 @@ main {
 .main-nav__item a:active,
 .mobile-nav__item a:hover,
 .mobile-nav__item a:active {
-  color: white;
+  color: rgb(255, 255, 255);
+  background-color: #0e4f1f;
+  border-radius: 7px;
+  padding: 0.5rem 1rem;
   border-bottom: 5px solid white;
 }
 
@@ -151,12 +154,13 @@ main {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-footer__link {
-  display: block;
-  margin: 1rem 0;
+  margin: 0.5rem 0;
 }
 
 .main-footer__link a {
@@ -212,12 +216,12 @@ main {
   width: 90%;
   height: 100%;
   list-style: none;
-  margin: 10% auto;
+  margin: 0% auto;
   padding: 0;
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .mobile-nav__item {
@@ -245,8 +249,13 @@ main {
 }
 
 @media (min-width: 41rem) {
+  .main-footer__links {
+    flex-direction: row;
+    justify-content: center;
+  }
+
   .main-footer__link {
-    display: inline-block;
+    /* display: inline-block; */
     margin: 0 1rem;
   }
 }
