--- a/customers/customers.css
+++ b/customers/customers.css
@@ -14,7 +14,7 @@ main {
 	width: 60%;
 	max-width: 40rem;
 	box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
-	transform: skewX(20deg);
+	transform: skew(20deg);
 	overflow: hidden;
 }
 
@@ -25,7 +25,7 @@ main {
 .testimonial__image {
 	width: 100%;
 	vertical-align: top; /*To solve whitespace problem*/
-	transform: skewX(-20deg) scale(1.3);
+	transform: skew(-20deg) scale(1.4);
 }
 
 .testimonial__info {
