--- a/main.css
+++ b/main.css
@@ -1,43 +1,43 @@
 #product-overview {
-  background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url('images/freedom.jpg') left 25% bottom 20% / cover no-repeat border-box,
-    #ff1b68;
+	background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+		url('images/freedom.jpg') left 25% bottom 20% / cover no-repeat border-box,
+		#ff1b68;
 
-  width: 100%;
-  /* height: 33vh; */
-  height: calc(100vh - 3.5rem);
-  /* margin-top: 3.5rem; */
-  position: relative;
+	width: 100%;
+	/* height: 33vh; */
+	height: calc(100vh - 3.5rem);
+	/* margin-top: 3.5rem; */
+	position: relative;
 }
 
 #product-overview h1 {
-  color: white;
-  font-family: 'Anton', sans-serif;
-  position: absolute;
-  bottom: 10%;
-  left: 3%;
-  font-size: 1.6rem;
+	color: white;
+	font-family: 'Anton', sans-serif;
+	position: absolute;
+	bottom: 10%;
+	left: 3%;
+	font-size: 1.6rem;
 }
 
 /* For desktop view */
 @media (min-width: 41rem) {
-  #product-overview {
-    /* height: 100vh; */
-    /* height: 40vh; */
-    /* background-position: center;
+	#product-overview {
+		/* height: 100vh; */
+		/* height: 40vh; */
+		/* background-position: center;
      */
 
-    background-position: left 25% bottom 50%;
-  }
+		background-position: left 25% bottom 50%;
+	}
 
-  #product-overview h1 {
-    font-size: 3rem;
-  }
+	#product-overview h1 {
+		font-size: 3rem;
+	}
 }
 
 .section-title {
-  color: #2ddf5c;
-  text-align: center;
+	color: #2ddf5c;
+	text-align: center;
 }
 /* 
 .plan__list {
@@ -46,195 +46,198 @@
 } */
 
 .plan {
-  background: #d5ffdc;
-  text-align: center;
-  padding: 1rem;
-  display: block;
-  margin: 0.5rem 0;
-  width: 100%;
+	background: #d5ffdc;
+	text-align: center;
+	padding: 1rem;
+	display: block;
+	margin: 0.5rem 0;
+	width: 100%;
 }
 
 .plan--highlighted {
-  background: #19b84c;
-  color: white;
+	background: #19b84c;
+	color: white;
 }
 
 .plan__annotation {
-  background: white;
-  color: #19b84c;
-  padding: 0.5rem;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
+	background: white;
+	color: #19b84c;
+	padding: 0.5rem;
+	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+	border-radius: 8px;
 }
 
 .plan__title {
-  color: #0e4f1f;
+	color: #0e4f1f;
 }
 
 .plan__price {
-  color: #858585;
+	color: #858585;
 }
 
 .plan--highlighted .plan__title {
-  color: white;
+	color: white;
 }
 
 .plan--highlighted .plan__price {
-  color: #0e4f1f;
+	color: #0e4f1f;
 }
 
 .plan__features {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 .plan__feature {
-  margin: 0.5rem 0;
+	margin: 0.5rem 0;
 }
 
 #key-features {
-  background: #ff1b68;
-  margin-top: 5rem;
-  padding: 1rem;
+	background: #ff1b68;
+	margin-top: 5rem;
+	padding: 1rem;
 }
 
 #key-features .section-title {
-  color: white;
-  margin: 2rem;
-  text-align: center;
+	color: white;
+	margin: 2rem;
+	text-align: center;
 }
 
 .key-feature__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  /* margin: auto; */
-  text-align: center;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	/* margin: auto; */
+	text-align: center;
 }
 
 /*   */
 
 .key-feature__image {
-  background: #ffcede;
-  width: 128px;
-  height: 128px;
-  border: 2px solid #424242;
-  border-radius: 50%;
-  margin: auto;
-  padding: 1.5rem;
+	background: #ffcede;
+	width: 128px;
+	height: 128px;
+	border: 2px solid #424242;
+	border-radius: 50%;
+	margin: auto;
+	padding: 1.5rem;
 }
 
 .key-feature__description {
-  text-align: center;
-  font-weight: bold;
-  color: white;
-  font-size: 1.2rem;
+	text-align: center;
+	font-weight: bold;
+	color: white;
+	font-size: 1.2rem;
 }
 
 .modal {
-  position: fixed;
-  display: none;
-  z-index: 200;
-  /* top: 20%; */
-  top: 30%;
-  left: 25%;
-  width: 50%;
-  background: white;
-  padding: 1rem;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+	position: fixed;
+	/* display: none; */
+	opacity: 0;
+	transform: translateY(-4rem);
+	transition: opacity 200ms ease-out, transform 500ms ease-out;
+	z-index: 200;
+	/* top: 20%; */
+	top: 30%;
+	left: 25%;
+	width: 50%;
+	background: white;
+	padding: 1rem;
+	border: 1px solid #ccc;
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
 .modal__title {
-  text-align: center;
-  font-size: 1.5rem;
-  margin: 0 0 1rem 0;
+	text-align: center;
+	font-size: 1.5rem;
+	margin: 0 0 1rem 0;
 }
 
 .modal__actions {
-  text-align: center;
+	text-align: center;
 }
 
 .modal__action {
-  border: 1px solid #0e4f1f;
-  background: #0e4f1f;
-  text-decoration: none;
-  color: white;
-  font: inherit;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
+	border: 1px solid #0e4f1f;
+	background: #0e4f1f;
+	text-decoration: none;
+	color: white;
+	font: inherit;
+	padding: 0.5rem 1rem;
+	cursor: pointer;
 }
 
 .modal__action:hover,
 .modal__action:active {
-  background: #2ddf5c;
-  border-color: #2ddf5c;
+	background: #2ddf5c;
+	border-color: #2ddf5c;
 }
 
 .modal__action--negative {
-  background: red;
-  border-color: red;
+	background: red;
+	border-color: red;
 }
 
 .modal__action--negative:hover,
 .modal__action--negative:active {
-  background: #ff5454;
-  border-color: #ff5454;
+	background: #ff5454;
+	border-color: #ff5454;
 }
 
 @media (min-width: 41rem) {
-  #product-overview {
-    /* height: 100vh; */
-    /* height: 40vh; */
-    /* background-position: center;
+	#product-overview {
+		/* height: 100vh; */
+		/* height: 40vh; */
+		/* background-position: center;
      */
 
-    background-position: left 25% bottom 50%;
-  }
+		background-position: left 25% bottom 50%;
+	}
 
-  #product-overview h1 {
-    font-size: 3rem;
-  }
+	#product-overview h1 {
+		font-size: 3rem;
+	}
 }
 
 @media (min-width: 41rem) {
-  .plan__list {
-    width: 100%;
-    text-align: center;
-  }
+	.plan__list {
+		width: 100%;
+		text-align: center;
+	}
 
-  .plan {
-    display: inline-block;
-    width: 30%;
-    vertical-align: middle;
-    min-width: 13rem;
-    max-width: 25rem;
-  }
+	.plan {
+		display: inline-block;
+		width: 30%;
+		vertical-align: middle;
+		min-width: 13rem;
+		max-width: 25rem;
+	}
 
-  .plan--highlighted {
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
-  }
+	.plan--highlighted {
+		box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+	}
 }
 
 @media (min-width: 41rem) {
-  .key-feature {
-    display: inline-block;
-    width: 30%;
-    vertical-align: top;
-    max-width: 25rem;
-  }
+	.key-feature {
+		display: inline-block;
+		width: 30%;
+		vertical-align: top;
+		max-width: 25rem;
+	}
 }
 
 @media (min-width: 41rem) {
-  .modal__title {
-    font-size: 2rem;
-  }
+	.modal__title {
+		font-size: 2rem;
+	}
 }
 
 @media (min-width: 1300px) {
-  #product-overview h1 {
-    bottom: 10%;
-    left: 55%;
-  }
+	#product-overview h1 {
+		bottom: 10%;
+		left: 55%;
+	}
 }
