--- a/main.css
+++ b/main.css
@@ -136,8 +136,9 @@
 	position: fixed;
 	/* display: none; */
 	opacity: 0;
-	transform: translateY(-4rem);
-	transition: opacity 200ms ease-out, transform 500ms ease-out;
+	transform: translateY(-10rem);
+	transition: opacity 200ms ease-out,
+		transform 500ms cubic-bezier(0.56, -0.12, 0.07, 0.73);
 	z-index: 200;
 	/* top: 20%; */
 	top: 30%;
