--- a/shared.css
+++ b/shared.css
@@ -27,7 +27,7 @@ main {
 	width: 100vw;
 	height: 100vh;
 	background: rgba(0, 0, 0, 0.5);
-	transform: opacity 0.2s linear;
+	transition: opacity 0.3s linear;
 }
 
 /*
