--- a/shared.css
+++ b/shared.css
@@ -140,7 +140,7 @@ main {
 }
 
 .main-nav__item--cta {
-	animation: wiggle 200ms 3s 8 none;
+	animation: wiggle 400ms 3s 8 ease-out none;
 }
 
 .main-nav__item--cta a,
@@ -278,12 +278,27 @@ main {
 	}
 }
 
-@keyframes wiggle {
+/* @keyframes wiggle {
 	from {
 		transform: rotateZ(-10deg);
 	}
 
 	to {
 		transform: rotateZ(30deg);
+	}
+} */
+
+/* Alternate syntax for adding multiple keyframes */
+@keyframes wiggle {
+	0% {
+		transform: rotateZ(0deg);
+	}
+
+	0% {
+		transform: rotateZ(-10deg);
+	}
+
+	100% {
+		transform: rotateZ(10deg);
 	}
 }
