--- a/customers/customers.css
+++ b/customers/customers.css
@@ -18,6 +18,10 @@ main {
 	overflow: hidden;
 }
 
+#customer-1:hover .testimonial__image-container {
+	animation: flip-customer 1s ease-out forwards;
+}
+
 #customer-2 .testimonial__image-container {
 	box-shadow: -3px 3px 5px 3px rgba(0, 0, 0, 0.3);
 }
@@ -85,5 +89,19 @@ main {
 		display: inline-block;
 		vertical-align: middle;
 		width: 30%;
+	}
+}
+
+@keyframes flip-customer {
+	0% {
+		transform: rotateY(0) skew(20deg);
+	}
+
+	50% {
+		transform: rotateY(160deg) skew(20deg);
+	}
+
+	100% {
+		transform: rotateY(360deg) skew(20deg);
 	}
 }
