--- a/shared.css
+++ b/shared.css
@@ -1,3 +1,8 @@
+:root {
+	--dark-green: #0e4f1f;
+	--highlight-color: #ff1b68;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -90,7 +95,7 @@ main {
 }
 
 .main-header__brand {
-	color: #0e4f1f;
+	color: var(--dark-green);
 	text-decoration: none;
 	font-weight: bold;
 	/* font-size: 1.5rem; */
@@ -123,7 +128,7 @@ main {
 .main-nav__item a,
 .mobile-nav__item a {
 	text-decoration: none;
-	color: #0e4f1f;
+	color: var(--dark-green);
 	font-weight: bold;
 	padding: 0.2rem 0;
 }
@@ -133,7 +138,7 @@ main {
 .mobile-nav__item a:hover,
 .mobile-nav__item a:active {
 	color: rgb(255, 255, 255);
-	background-color: #0e4f1f;
+	background-color: var(--dark-green);
 	border-radius: 7px;
 	padding: 0.5rem 1rem;
 	border-bottom: 5px solid white;
@@ -146,7 +151,7 @@ main {
 .main-nav__item--cta a,
 .mobile-nav__item--cta a {
 	color: white;
-	background: #ff1b68;
+	background: var(--highlight-color);
 	padding: 0.5rem 1rem;
 	border-radius: 8px;
 }
@@ -155,7 +160,7 @@ main {
 .main-nav__item--cta a:active,
 .mobile-nav__item--cta a:hover,
 .mobile-nav__item--cta a:active {
-	color: #ff1b68;
+	color: var(--highlight-color);
 	background: white;
 	border: none;
 }
@@ -190,10 +195,10 @@ main {
 }
 
 .button {
-	background: #0e4f1f;
+	background: var(--dark-green);
 	color: white;
 	font: inherit;
-	border: 1.5px solid #0e4f1f;
+	border: 1.5px solid var(--dark-green);
 	padding: 0.5rem;
 	border-radius: 8px;
 	font-weight: bold;
@@ -203,7 +208,7 @@ main {
 .button:hover,
 .button:active {
 	background: white;
-	color: #0e4f1f;
+	color: var(--dark-green);
 }
 
 .button:focus {
